# frfr

./: .gitignore  CODEOWNERS  DESIGN.md  DOCS_INDEX.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  PARALLEL_AND_RECOVERY.md  QUICKSTART.md  README.docker.md  README.md  STATUS.md  TEST_SUITE_SUMMARY.md  aggressive_fact_filter.py  analyze_v4_2.py  docker-compose.dev.yml  docker-compose.yml  extract-pdf  pyproject.toml  requirements-local.txt  requirements.txt  retroactive_qv_tagger.py  setup-auth  test_claude_cli.py  test_extraction_patterns.py  test_fact_extraction.py  test_quote_corrector.py  test_v3_extraction.py  test_v4_4_extraction.py  test_v4_5_extraction.py  test_v5_validation.py  v5_extraction_monitor.sh
docs/: AUTHENTICATION.md  DOCS_INDEX.md  ENHANCED_EXTRACTION.md  MAXIMUM_DEPTH_MODE.md  PARALLEL_AND_RECOVERY.md  README.docker.md  STRUCTURAL_EXTRACTION.md  V5_DESIGN.md  V5_FINAL_RESULTS.md  V5_IMPLEMENTATION_COMPLETE.md
frfr/: __init__.py  cli.py  config.py  session.py
frfr/documents/: __init__.py  pdf_extractor.py
frfr/extraction/: claude_client.py  extraction_patterns.py  fact_extractor.py  schemas.py  v4_enhancements.py
frfr/validation/: __init__.py  fact_validator.py  quote_corrector.py
scripts/: README_TESTS.md  example_pdf_extraction.py  extract_pdf.sh  extract_pdf_text.py  process_pdf.sh  process_pdf_clean.sh  process_pdf_hq.sh  start_temporal.py  test_cli_components.sh  test_components.sh  test_document_processing.sh  test_ml_components.sh  test_python_env.sh  test_system_deps.sh  test_temporal.sh
tests/: test_pdf_extraction.py
