[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frfr"
version = "0.1.0"
description = "High-confidence document Q&A using LLM swarm consensus"
authors = [{name = "frfr contributors"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "TBD"}
keywords = ["llm", "document-qa", "consensus", "hallucination-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.18.0",
    "temporalio>=1.5.0",
    "pydantic>=2.0.0",
    "pypdf2>=3.0.0",
    "pytesseract>=0.3.10",
    "python-magic>=0.4.27",
    "markdown>=3.5.0",
    "sentence-transformers>=2.5.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.4.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
frfr = "frfr.cli:main"

[tool.setuptools.packages.find]
include = ["frfr*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
